@@ -19,7 +19,7 @@ package com.badlogic.gdx;
 import com.badlogic.gdx.files.FileHandle;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 
-/** Provides standard access to the filesystem, classpath, Android SD card, and Android assets directory.
+/** Provides standard access to the filesystem, classpath, Android app storage (internal and external), and Android assets directory.
  * @author mzechner
  * @author Nathan Sweet */
 public interface Files {
@@ -37,7 +37,7 @@ public interface Files {
 		 * Internal files are always readonly. */
 		Internal,
 
-		/** Path relative to the root of the SD card on Android and to the home directory of the current user on the desktop. */
+		/** Path relative to the root of the app external storage on Android and to the home directory of the current user on the desktop. */
 		External,
 
 		/** Path that is a fully qualified, absolute filesystem path. To ensure portability across platforms use absolute files only
@@ -69,12 +69,11 @@ public interface Files {
 	/** Convenience method that returns a {@link FileType#Local} file handle. */
 	public FileHandle local (String path);
 
-	/** Returns the external storage path directory. This is the SD card on Android and the home directory of the current user on
-	 * the desktop. */
+	/** Returns the external storage path directory. This is the app external storage on Android and the home directory of the
+	 * current user on the desktop. */
 	public String getExternalStoragePath ();
 
-	/** Returns true if the external storage is ready for file IO. Eg, on Android, the SD card is not available when mounted for use
-	 * with a PC. */
+	/** Returns true if the external storage is ready for file IO. */
 	public boolean isExternalStorageAvailable ();
 
 	/** Returns the local storage path directory. This is the private files directory on Android and the directory of the jar on the
