@@ -7,6 +7,7 @@
 - API Addition: Added an insertRange method to array collections.
 - Fixed GestureDetector maxFlingDelay.
 - API Change: Changed default GestureDetector maxFlingDelay to Integer.MAX_VALUE (didn't work before, this matches that).
+- Gdx.files.external on Android now uses app external storage - see wiki article File handling for more information
 
 [1.9.11]
 - Update to MobiVM 2.3.8
